Revert coloration to C#

--- a/report/index.tex
+++ b/report/index.tex
@@ -139,7 +139,7 @@ Ces résultats sont ensuite intégré au \textit{Completion Provider}.
 
 \subsection{Invite de complétion}
 
-\lstset{language=C}
+\lstset{language=[Sharp]C}
 \begin{lstlisting}[frame=single]
 public class CompletionProvider : GLib.Object, SourceCompletionProvider
 {
