Remove wrong reference

--- a/report/index.tex
+++ b/report/index.tex
@@ -103,7 +103,7 @@ La tâche à réaliser est l'amélioration de la complétion des commande de ré
 \subsection{La complétion dans LaTeXila 2.2}
 \label{sub:completion}
 La version 2.2 de LaTeXiLa fournit une complétion exhaustive des éléments statiques du langage \LaTeX  en se basant sur un fichier XML descriptif lu au démarrage du programme.
-Cette complétion est donc dite \textit{statique}, car elle ne s'adapte pas au contenu précédemment tapé par l'utilisateur\ref{cha:compiler}. 
+Cette complétion est donc dite \textit{statique}, car elle ne s'adapte pas au contenu précédemment tapé par l'utilisateur. 
 
 \begin{description}
   \item[Fonction] de la forme \\\textit{fonction}\{argument\}, défini par \LaTeX
