Improve bugzilla part

--- a/report/index.tex
+++ b/report/index.tex
@@ -123,7 +123,9 @@ Git est le VCS\footnote{Version Control System} utilisé par la très grande maj
 Pour ce projet, nous avons créé un \textit{fork} du dépôt principal sur Github et travaillé sur une branche annexe, régulièrement mise à jour à partir du dépôt pricipale.
 
 \subsection{Bugzilla}
-Les soumissions sont faites via le bugzilla du projet Gnome, ce qui permet au mainteneur de commenter le code soumis.
+Les soumissions sont faites via le Bugzilla du projet Gnome.
+Bugzilla\footnote{\url{www.bugzilla.org}} est une plateforme de suivi de bug gratuite et libre, qui a vocation à faciliter la colaboration entre les développeurs.
+Une soumission de bug sur la plateforme du projet donne lieu à une page dédiée\footnote{Exemple de la page de ce projet \url{https://bugzilla.gnome.org/show_bug.cgi?id=748069}}, ce qui permet au mainteneur de commenter le rapport d'incident et le code soumis.
 Il s'ensuit ensuite un va-et-vient entre le mainteneur et le développeur jusqu'à la fusion du patch dans la branche principale du projet.
 
 \chapter{Réalisation}
